--- a/_posts/2019-07-12-tuto1.md
+++ b/_posts/2019-07-12-tuto1.md
@@ -3,6 +3,7 @@ layout:     post
 title:      First Python Tutorial (Data types)
 date:       2019-07-12 09:34:19
 summary:    This is the first python tutorial I gave at HEC. This tutorial mainly covers python's main data types.
+published: false
 categories: teaching
 ---
 #  Python Beginner Workshop 1
