--- a/_posts/2019-07-21-tuto2.md
+++ b/_posts/2019-07-21-tuto2.md
@@ -3,6 +3,7 @@ layout:     post
 title:      Second Python Tutorial (Pandas)
 date:       2019-07-21 17:12:18
 summary:    This is the second python tutorial I gave at HEC. This tutorial covers the fundamentals of the pandas module.
+published: false
 categories: teaching
 ---
 # Python Beginner Workshop 2
@@ -1142,7 +1143,7 @@ star_wars_data.loc[:, 'Han_Solo'].value_counts().plot(kind='bar')
 
 
 
-![png](output_31_1.png)
+![png](/images/output_31_1.png)
 
 
 
@@ -1158,7 +1159,7 @@ star_wars_data.loc[:, 'Emperor_Palpatine'].value_counts().plot(kind='bar')
 
 
 
-![png](output_32_1.png)
+![png](/images/output_32_1.png)
 
 
 
@@ -1174,7 +1175,7 @@ star_wars_data.loc[:, 'Emperor_Palpatine'].value_counts().plot(kind='pie')
 
 
 
-![png](output_33_1.png)
+![png](/images/output_33_1.png)
 
 
 > We will artificially construct a fake dataset in order to use different type of graphs than the ones we previously used which were for categorical data. We could use a real dataset, but we will generate a random one here for simplicity using the *randn* function.
@@ -1255,7 +1256,7 @@ df.plot()
 
 
 
-![png](output_36_1.png)
+![png](/images/output_36_1.png)
 
 
 
@@ -1272,7 +1273,7 @@ df.plot()
 
 
 
-![png](output_37_1.png)
+![png](/images/output_37_1.png)
 
 
 ### 2.4 More possibilities with matplotlib.pyplot
@@ -1305,7 +1306,7 @@ plt.title('My Graph')
 
 
 
-![png](output_39_1.png)
+![png](/images/output_39_1.png)
 
 
 
@@ -1356,7 +1357,7 @@ ax2.legend(['My 2nd legend'])
 
 
 
-![png](output_40_1.png)
+![png](/images/output_40_1.png)
 
 
 ### Descriptive statistics using pandas Dataframe
