--- a/_posts/2019-07-28-tuto3.md
+++ b/_posts/2019-07-28-tuto3.md
@@ -3,6 +3,7 @@ layout:     post
 title:      Third Python Tutorial (numpy/loops)
 date:       2019-07-21 19:22:18
 summary:    This is the third python tutorial I gave at HEC. This tutorial covers the fundamentals of numpy as well as loops in python.
+published: false
 categories: teaching
 ---
 
