--- a/_posts/2019-08-02-tuto4.md
+++ b/_posts/2019-08-02-tuto4.md
@@ -3,6 +3,7 @@ layout:     post
 title:      Fourth Python Tutorial (functions)
 date:       2019-08-02 11:42:09
 summary:    This is the fourth python tutorial I gave at HEC. This tutorial covers the fundamentals of functions in python.
+published: false
 categories: teaching
 ---
 
