--- a/_posts/2019-08-12-tuto5.md
+++ b/_posts/2019-08-12-tuto5.md
@@ -3,6 +3,7 @@ layout:     post
 title:      Fifth Python Tutorial (searborn)
 date:       2019-08-12 14:14:56
 summary:    This is the fifth python tutorial I gave at HEC. This tutorial covers the fundamentals of searborn.
+published: false
 categories: teaching
 ---
 
@@ -123,7 +124,7 @@ sns.relplot(x="timepoint", y="BOLD signal", data=fmri_subset)
 
 
 
-![png](output_6_1.png)
+![png](/images/output_6_1.png)
 
 
 ### Exercise !
@@ -146,7 +147,7 @@ sns.relplot\
 
 
 
-![png](output_8_1.png)
+![png](/images/output_8_1.png)
 
 
 > Right, now it is easier to understand the graph. The `hue` parameters refers to which column apply a color 
@@ -171,7 +172,7 @@ sns.relplot(x="timepoint", y="BOLD signal", hue="ROI", style="subject", data=fmr
 
 
 
-![png](output_10_1.png)
+![png](/images/output_10_1.png)
 
 
 > It's kind of hard to visualize the shapes of the dots, let's zoom a bit. For this task, we need to explain what are
@@ -194,7 +195,7 @@ type(g)
 
 
 
-![png](output_12_1.png)
+![png](/images/output_12_1.png)
 
 
 > Indeed, a `relplot` returns a `FacetGrid`. A `FacetGrid` is a collection of plots arranged together. Let's see a 
@@ -223,7 +224,7 @@ g
 
 
 
-![png](output_14_1.png)
+![png](/images/output_14_1.png)
 
 
 > Let's add a bit of details on the previous plot
@@ -255,7 +256,7 @@ plot_simple_facet(plt.scatter)
 
 
 
-![png](output_16_2.png)
+![png](/images/output_16_2.png)
 
 
 > Let's analyse the previous cell line by line.  
@@ -288,7 +289,7 @@ plot_simple_facet(sns.scatterplot)
 
 
 
-![png](output_18_1.png)
+![png](/images/output_18_1.png)
 
 
 
@@ -306,7 +307,7 @@ plot_simple_facet(sns.lineplot)
 
 
 
-![png](output_19_1.png)
+![png](/images/output_19_1.png)
 
 
 ## Size and axes limits
@@ -337,7 +338,7 @@ sns.relplot(x="volume", y="price", hue="cut", style="color", data=plotting_df)
 
 
 
-![png](output_22_1.png)
+![png](/images/output_22_1.png)
 
 
 
@@ -356,7 +357,7 @@ g.ax.set_xlim(0, 1000)
 
 
 
-![png](output_23_1.png)
+![png](/images/output_23_1.png)
 
 
 > The previous initial plot is crap, it's way too hard to interpret. Before improving it, let's start by explaining 
@@ -388,7 +389,7 @@ g.set_titles("{col_name}")
 
 
 
-![png](output_25_1.png)
+![png](/images/output_25_1.png)
 
 
 > In the previous cell, we split the original plot into 5 plots, one for each `cut`. We used the `col_wrap` attribute
@@ -462,7 +463,7 @@ g.ax.set_title("default: dark")
 
 
 
-![png](output_28_1.png)
+![png](/images/output_28_1.png)
 
 
 
@@ -482,7 +483,7 @@ g.ax.set_title("white")
 
 
 
-![png](output_29_1.png)
+![png](/images/output_29_1.png)
 
 
 
@@ -502,7 +503,7 @@ g.ax.set_title("darkgrid")
 
 
 
-![png](output_30_1.png)
+![png](/images/output_30_1.png)
 
 
 
@@ -524,7 +525,7 @@ g.ax.set_title('ticks')
 
 
 
-![png](output_31_1.png)
+![png](/images/output_31_1.png)
 
 
 > If you want to temporarily modify the style, you can use a `with` statement along with the `axes_style` function.
@@ -539,7 +540,7 @@ with sns.axes_style("darkgrid"):
 ```
 
 
-![png](output_33_0.png)
+![png](/images/output_33_0.png)
 
 
 
@@ -594,7 +595,7 @@ with sns.axes_style("darkgrid", {"axes.facecolor": "green"}):
 ```
 
 
-![png](output_35_0.png)
+![png](/images/output_35_0.png)
 
 
 ### Exercise !
@@ -614,7 +615,7 @@ sns.palplot(new_palette)
 ```
 
 
-![png](output_38_0.png)
+![png](/images/output_38_0.png)
 
 
 
@@ -633,7 +634,7 @@ ax = sns.heatmap(flights, annot=True, fmt="d", ax=ax)
 ```
 
 
-![png](output_39_0.png)
+![png](/images/output_39_0.png)
 
 
 
@@ -645,7 +646,7 @@ ax = sns.heatmap(flights, annot=True, fmt="d", cmap="Blues", ax=ax)
 ```
 
 
-![png](output_40_0.png)
+![png](/images/output_40_0.png)
 
 
 
@@ -675,7 +676,7 @@ sns.countplot(x='class', data=titanic_df)
 
 
 
-![png](output_43_1.png)
+![png](/images/output_43_1.png)
 
 
 ### KDE Plots
@@ -732,7 +733,7 @@ ax.set_xlim(0,60) # set the x axis range to [0,60]
 
 
 
-![png](output_46_1.png)
+![png](/images/output_46_1.png)
 
 
 
@@ -759,7 +760,7 @@ ax2.set_xlim(0,300)
 
 
 
-![png](output_47_1.png)
+![png](/images/output_47_1.png)
 
 
 > In the previous cell, we introduced few new concepts. First, we used the 2 `ax` objects  returned by `plt.subplots` since we wanted 2 plots side by side (`ncols=2`). We then used these `ax` to show our kdeplots by passing `ax[0]` and `ax[1]` to the kdeplots.  
@@ -774,7 +775,7 @@ ax = sns.distplot(titanic_df.fare, bins=4, kde=False)
 ```
 
 
-![png](output_50_0.png)
+![png](/images/output_50_0.png)
 
 
 ### Exercise!
@@ -799,7 +800,7 @@ sns.jointplot(x='fare', y="age", data=titanic_df[titanic_df.fare < 300])
 
 
 
-![png](output_53_1.png)
+![png](/images/output_53_1.png)
 
 
 
@@ -816,7 +817,7 @@ sns.jointplot(x='fare', y='age', data=titanic_df[titanic_df.fare < 300], kind='h
 
 
 
-![png](output_54_1.png)
+![png](/images/output_54_1.png)
 
 
 ### Boxplots and violin plots
@@ -842,7 +843,7 @@ ax.set_ylim(0,250)
 
 
 
-![png](output_56_1.png)
+![png](/images/output_56_1.png)
 
 
 > The little dots over the boxes are the outliers. The *whiskers* around the boxes show the extent of the point beyond the center of the distribution.  
@@ -866,7 +867,7 @@ ax.set_ylim(0,250)
 
 
 
-![png](output_58_1.png)
+![png](/images/output_58_1.png)
 
 
 > It's much easier to deduce conclusions and gather information from violin plots. For instance, here, we see that there are a lot more variations in the price paid by clients in the first class. There are probably very different cabins going at different price for these customers. On the other hand, most customers in the third class paid the same amount (probably for a bunk bed in a tiny cabin).
@@ -884,7 +885,7 @@ Image("./last_exercise.png")
 
 
 
-![png](output_61_0.png)
+![png](/images/output_61_0.png)
 
 
 
